# pixelmatch-cpp17

./: .bazelrc  .bazelversion  .gitignore  BUILD.bazel  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  renovate.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: codecov.yml
.github/workflows/: coverage.yml  main.yml
docs/: code_coverage.md  fuzz_testing.md
pixelmatch/: pixelmatch.cc  pixelmatch.h
src/pixelmatch/: image_utils.cc  image_utils.h  pixelmatch.cc  pixelmatch.h
tests/: BUILD  BUILD.bazel  image_utils_tests.cc  pixelmatch_fuzzer.cc  pixelmatch_tests.cc
tools/: coverage.sh
