"""
A C++17 port of the JavaScript pixelmatch library, providing a small pixel-level image comparison library.

To use, add the following to your MODULE.bazel file:
```
bazel_dep(name = "pixelmatch-cpp17", version = "1.0.0")
git_override(
    module_name = "pixelmatch-cpp17",
    remote = "https://github.com/jwmcglynn/pixematch-cpp17",
)
```
"""

module(name = "pixelmatch-cpp17", repo_name = "pixelmatch-cpp17", version = "1.0.1")

#
# Build dependencies
#
bazel_dep(name = "rules_cc", version = "0.0.17")

#
# Test dependencies
#
bazel_dep(name = "googletest", repo_name = "com_google_gtest", version = "1.15.2", dev_dependency = True)
bazel_dep(name = "stb", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "stb",
    remote = "https://github.com/jwmcglynn/rules_stb",
    commit = "075e5a470e31e46a7318cc308c79dba205a6b2eb",
)

#
# Fuzzing dependencies
#
bazel_dep(name = "rules_fuzzing", version = "0.5.2", dev_dependency = True)
