"""
A C++17 port of the JavaScript pixelmatch library, providing a small pixel-level image comparison library.

To use, add the following to your MODULE.bazel file:
```
bazel_dep(name = "pixelmatch-cpp17", version = "1.0.0")
git_override(
    module_name = "pixelmatch-cpp17",
    remote = "https://github.com/jwmcglynn/pixematch-cpp17",
)
```
"""

module(name = "pixelmatch-cpp17", repo_name = "pixelmatch-cpp17", version = "1.0.1")

new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

#
# Build dependencies
#
bazel_dep(name = "rules_cc", version = "0.1.1")

#
# Test dependencies
#
bazel_dep(name = "googletest", repo_name = "com_google_gtest", version = "1.17.0", dev_dependency = True)

new_local_repository(
    name = "stb",
    build_file = "//third_party:BUILD.stb",
    path = "third_party/stb",
)

#
# Fuzzing dependencies
#
bazel_dep(name = "rules_fuzzing", version = "0.5.2", dev_dependency = True)
